# generativeAI

./: 00_PowerShell 配置 Conda 全流程.md  pip install -e.md  uv与anaconda区别.md
01_gemini_cli/: geminicli.md
02_small_demo/GraphRAG/: how_to_change_free_model.py
02_small_demo/RAG/gemini_sample/: chunk.py  rag-demo.py
02_small_demo/RAG/ollama_sample/: README.md  embed_ollamaEmbeddings.py  my_chunk.py  rag_demo.py
02_small_demo/agent/langchain/: [0]agent-lanchain-ollama.py  tools.py
02_small_demo/agent/langchain/test/: my_text.txt
02_small_demo/agent/pydantic_ai/: tools.py
02_small_demo/mcp/pydantic_ai/: agent-call-mcp.py  ai-mcp-demo.py
03_realworld/: .gitignore  __init__.py  pyproject.toml
03_realworld/docs/: README.md  config.md  pyproject.toml.md
03_realworld/examples/: demo_embedding_modes.py  gemini_example.py
03_realworld/src/realworld/: config.py  document_processor.py  embedders.py  logger.py
03_realworld/src/realworld/cli/: __init__.py  main.py
03_realworld/tests/: test_rag.py
04_claude_code/: 00_base.md
gemini_cli/: 提示词工程.md
small_demo/RAG/: rag-demo.py
small_demo/RAG/gemini_sample/: embed.py
small_demo/RAG/ollama_sample/: embed.py
small_demo/RAG/ollama_sample/data/: data.txt
small_demo/RAG/ollama_sample/db/chroma.db/: chroma.sqlite3
small_demo/RAG/realworld/: FIXES_SUMMARY.md  PROJECT_REVIEW.md  README.md  cli.py  config.json  config相关解读.md  document_processor.py  logger.py  main.py  pyproject.toml  rag_engine.py  requirements.txt  vector_store.py
small_demo/RAG/realworld/data/: __init__.py
small_demo/RAG/realworld/data/db/chroma/: chroma.sqlite3
small_demo/RAG/realworld/data/documents/: ai_intro.md  ml_basics.txt
small_demo/RAG/realworld/docs/: README.md  __init__.py  config相关解读.md  pyproject.toml.md  工程结构.md  日志优化完成.md  日志优化说明.md  日志快速参考.md
small_demo/RAG/realworld/examples/: __init__.py  demo_embedders.py
small_demo/RAG/realworld/src/realworld/: __init__.py  config.py  document_processor.py  embedders.py  logger.py  rag_engine.py  vector_store.py
small_demo/RAG/realworld/src/realworld.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
small_demo/RAG/realworld/src/realworld/cli/: cli.py  main.py
small_demo/RAG/realworld/tests/: test_rag.py
small_demo/agent/: langchain-VS-pydantic_ai.md
small_demo/agent/langchain/: [0]agent-lanchain-ollama.py  agent-lanchain-ollama-async.py  agent-langchain-demo.py  agent-langchain.py  stream-test.py  tools.py  説明.md
small_demo/agent/pydantic_ai/: ai-agent-demo.py  pydantic_ai_install.md
small_demo/agent/pydantic_ai/test/: test.txt
small_demo/mcp/: ai-mcp-demo.py  mcp添加方法.md
small_demo/mcp/langchain/: agent-call-mcp-stream.py  agent-call-mcp.py  tools.py
small_demo/mcp/pydantic_ai/: ai-mcp-demo.py
